# bb-docx-render

./: README.md  bb.edn  deps.edn  fill_docx.bb  pyproject.toml
.cpcache/: 2A14E341D1763FE8D8E92352FDBE4F7E.basis  2A14E341D1763FE8D8E92352FDBE4F7E.cp  2A14E341D1763FE8D8E92352FDBE4F7E.manifest  527639737.basis  527639737.cp
Formula/: bb-docx-render.rb
data/: SamThiLuuLy.json  data.json
scoop/: bb-docx-render.json
templates/: jinja2-ttba.docx  template.docx
